--- a/samples/minimal/index.html
+++ b/samples/minimal/index.html
@@ -18,7 +18,7 @@
         <script src="scripts/loadScenario.js"></script>
     </head>
     <body>
-         RetroJS - Votre Scénario
+        RetroJS - Votre ScÃ©nario
         <div id="canvasContainer"></div>
         <div id="info"></div>
         <script src="scripts/main.js"></script>
